--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -80,9 +80,10 @@
 #nav__menu .btn {
     padding: 6px 14px;
     margin: 0 0 0 1.5em;
+    background-color: #FF00FF;
 }
 #nav__menu.is__sticky .btn:hover {
-    background-color: #FF00FF;
+    background-color: #C800DB;
 }
 #nav__menu .icon__whatsapp, #nav__menu .icon__viber, .t-msg svg {
     fill: #fff;
