--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -64,6 +64,9 @@
     border: 1px solid #FFB5C5;
     color: #fff;
 }
+.btn.active {
+    background-color: #C800DB;
+}
 .excursions .buttons div + div {
     margin: 0 0 0 .5rem;
 }
