--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -219,6 +219,10 @@ footer .develop__link a {
 .about a:hover {
     text-decoration: underline;
 }
+footer .footer__menu ul li a:hover {
+    color: #FFFFFF;
+    text-decoration: underline;
+}
 @media screen and (max-width: 992px) {
     .t-msg svg {
         width: 28px;
