--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -259,4 +259,7 @@ footer .footer__socials > div:hover .icon:not(.icon__address) {
     .scrolled {
         overflow-x: scroll;
     }
+    .gallery__box figure {
+        flex-basis: 50%;
+    }
 }
