--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -265,4 +265,7 @@ footer .footer__socials > div:hover .icon:not(.icon__address) {
     .gallery__box figure {
         flex-basis: 50%;
     }
+    .popup {
+        top: 0;
+    }
 }
