--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -31,7 +31,7 @@
     border-top-left-radius: 25px;
 }
 .form__order .single__block select {
-    border: 1px solid #f57336;
+    border: 1px solid #858585;
     padding: 12px;
     background-color: #fff;
     width: 100%;
